--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -123,6 +123,7 @@
             padding-left: 0px;
             box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
             display: none;
+            z-index: 1000;
         }
 
         .select_option {
