--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,8 @@ html {
   background: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #212529;
+  user-select: none;
+  touch-action: none;
 }
 ul {
   list-style: none;
