--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -168,6 +168,11 @@
             .description {
                 font-size: 14px;
             }
+
+            .home_btns .btn {
+                padding: 5px 20px;
+                border-radius: 5px;
+            }
         }
 
         .content_right .frangetes {
