--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -62,7 +62,7 @@
 
         .nav_link.active {
             &::after {
-                // width: 100%;
+                width: 100%;
             }
         }
 
