--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@
   --bs-gray-900: #212529;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #09f399;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
@@ -45,7 +45,7 @@
   --bs-dark: #212529;
   --bs-primary: rgb(13, 110, 253);
   --bs-secondary: rgb(108, 117, 125);
-  --bs-success: rgb(25, 135, 84);
+  
   --bs-info: rgb(13, 202, 240);
   --bs-warning: rgb(255, 193, 7);
   --bs-danger: rgb(220, 53, 69);
@@ -77,6 +77,7 @@
   --secondary-4: #efffff;
   --secondary-7: #f3fff9;
   --gray-3: #c6c2c2;
+
 }
 
 body,
@@ -85,7 +86,7 @@ html {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #212529;
   user-select: none;
-  touch-action: none;
+  
 }
 ul {
   list-style: none;
