--- a/src/pages/prices/prices.scss
+++ b/src/pages/prices/prices.scss
@@ -14,7 +14,7 @@
     margin-top: 55px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    align-items: center;
+    // align-items: center;
     gap: 25px;
 }
 
