--- a/src/components/priceCard/priceCard.scss
+++ b/src/components/priceCard/priceCard.scss
@@ -3,12 +3,16 @@
     padding: 25px;
     font-family: Prompt;
     text-transform: capitalize;
-    height: max-content;
+    // height: max-content;
 
     .priceCard_inner {
         background-color: white;
-
+        height: 100%;
+        display: grid;
+        align-items: center;
     }
+
+
 
     .pr_card_top {
         padding: 5px;
@@ -66,7 +70,7 @@
 
 
     .pr_priceCard_btn {
-        margin-top: 25px;
+        margin-top: 5px;
         color: white;
         text-align: center;
         height: 45px;
@@ -209,7 +213,7 @@
     .pr_card_info .inc_desc p span {
         color: var(--primary-5);
     }
-    
+
     .pr_priceCard_btn {
         background-color: var(--primary-5);
     }
@@ -225,7 +229,7 @@
     .pr_card_info .inc_desc p span {
         color: var(--bs-orange);
     }
-    
+
     .pr_priceCard_btn {
         background-color: var(--bs-orange);
     }
