--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
   --bs-dark: #212529;
   --bs-primary: rgb(13, 110, 253);
   --bs-secondary: rgb(108, 117, 125);
-  
+
   --bs-info: rgb(13, 202, 240);
   --bs-warning: rgb(255, 193, 7);
   --bs-danger: rgb(220, 53, 69);
@@ -78,7 +78,6 @@
   --secondary-4: #efffff;
   --secondary-7: #f3fff9;
   --gray-3: #c6c2c2;
-
 }
 
 body,
@@ -87,7 +86,6 @@ html {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #212529;
   user-select: none;
-  
 }
 ul {
   list-style: none;
@@ -99,6 +97,7 @@ a {
 .container {
   max-width: 1400px;
   margin: auto;
+  position: relative;
 }
 @media (max-width: 1400px) {
   .container {
