file is finished

--- a/src/pages/prices/prices.scss
+++ b/src/pages/prices/prices.scss
@@ -1,7 +1,11 @@
+.prices_page_margin {
+    margin-top: 100px;
+}
+
 .prices_page_title {
     font-family: Prompt;
     text-align: center;
-    margin-top: 65px;
+    margin-top: 145px;
     font-size: 47px;
     line-height: 50px;
 
