--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -1,3 +1,7 @@
+.services_page_margin {
+    margin-top: 90px;
+}
+
 .services_page {
     padding-top: 60px;
 }
@@ -73,6 +77,7 @@
         font-size: 18px;
         line-height: 22px;
     }
+
     .services_grid {
         margin-top: 15px;
     }
