--- a/src/pages/works/works.scss
+++ b/src/pages/works/works.scss
@@ -1,8 +1,12 @@
+.works_page_margin {
+    margin-top: 90px;
+}
+
 .ourWorks_title {
     text-align: center;
     font-size: 56px;
     font-family: Prompt;
-    margin-top: 55px;
+    margin-top: 135px;
 
     span {
         color: var(--bs-cyan2);
