--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,15 +1,13 @@
 .top_head {
     width: 100%;
-    position: relative;
+    position: fixed;
     top: 0;
-    background: white;
     padding: 15px 0;
     transition: all 0.3s ease;
-
+    z-index: 10000;
 }
 
 .top_head.scrolled {
-    position: fixed;
     background: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
