--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,138 +1,125 @@
 .footer {
-    margin-top: 70px;
-    background-color: hsla(263.0769230769231, 100.00%, 97.45%, 1.00);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 30px;
-    padding: 15px 0;
-    margin-bottom: 10px;
+  margin-top: 70px;
+  background-color: hsla(263.0769230769231, 100%, 97.45%, 1);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+  padding: 15px 0;
+  margin-bottom: 10px;
 }
 
 .footer_top {
-    padding: 15px 0 0 0;
+  padding: 15px 0 0 0;
+}
+.footer_center {
+  width: 100%;
+  padding: 0 10px;
+}
+.social_link {
+  display: grid;
+  gap: 15px;
+  width: 100%;
+
+  a {
+    border: 1px solid rgba(30, 143, 255, 0.411);
+    padding: 5px 12px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 7px;
+    font-size: 18px;
+    transition: 0.2s linear;
+    font-weight: bold;
+    background-color: white;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    &:hover {
+      background-color: rgb(133, 241, 200);
+      color: rgb(24, 1, 87);
+    }
+  }
 }
 
-.footer_center {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 90%;
-    gap: 25px;
-
-
-    .ft_ct_wars {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-family: Poppins;
-        gap: 10px;
-
-        &:first-child,
-        &:last-child {
-            background-color: white;
-            border-radius: 8px;
-            padding: 0 0 6px 0;
-        }
-
-        #footer_ct_title {
-            width: 65%;
-            text-align: center;
-            padding: 10px 0;
-            font-size: 18px;
-            font-weight: 600;
-            text-transform: capitalize;
-            border-bottom: 1px solid var(--bs-gray-500);
-        }
-
-        .blanked_link p {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            padding: 5px 0;
-
-            span {
-                line-height: 0;
-                font-size: 20px;
-                color: var(--bs-primary);
-            }
-        }
-
-        & div {
-            display: flex;
-            flex-direction: column;
-            text-align: justify;
-            gap: 10px;
-            text-transform: capitalize;
-
-            a {
-                color: var(--gray-2);
-            }
-
-            a.active {
-                text-decoration: underline;
-                color: var(--primary-5);
-            }
-        }
+@media (min-width: 512px) {
+  .social_link {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 768px) {
+  .social_link {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1024px) {
+  .footer_center {
+    padding: 0 20px;
+  }
+  .social_link {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    a {
+      flex-direction: column;
+      padding: 10px;
+      font-size: 22px;
     }
-
+  }
 }
 
 .footer_bottom {
-    padding: 12px 0;
-    width: 80%;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: var(--gray-2);
+  padding: 12px 0;
+  width: 80%;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  color: var(--gray-2);
 
-    span {
-        line-height: 0;
-    }
+  span {
+    line-height: 0;
+  }
 
-    p span {
-        color: violet;
-    }
+  p span {
+    color: violet;
+  }
 }
 
-@media(max-width:992px) {
-    .footer_center {
-        grid-template-columns: 1fr 1fr;
-    }
+@media (max-width: 992px) {
+  .footer_center {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-@media(max-width:512px) {
-    .footer_center {
-        grid-template-columns: 1fr;
-        font-size: 14px;
-        gap: 15px;
+@media (max-width: 512px) {
+  .footer_center {
+    grid-template-columns: 1fr;
+    font-size: 14px;
+    gap: 15px;
 
-        .ft_ct_wars {
-            align-items: flex-start;
-            gap: 5px;
+    .ft_ct_wars {
+      align-items: flex-start;
+      gap: 5px;
 
+      &:first-child,
+      &:last-child {
+        padding: 0 15px;
+      }
 
-            &:first-child,
-            &:last-child {
-                padding: 0 15px;
-            }
-
-            #footer_ct_title {
-                text-align: start;
-                width: auto;
-            }
-        }
+      #footer_ct_title {
+        text-align: start;
+        width: auto;
+      }
     }
+  }
 
-    .footer_bottom {
-        padding: 7px 0;
-        font-size: 12px;
-        gap: 5px;
-        width: 95%;
-        border-radius: 5px;
-    }
+  .footer_bottom {
+    padding: 7px 0;
+    font-size: 12px;
+    gap: 5px;
+    width: 95%;
+    border-radius: 5px;
+  }
 }
