--- a/src/components/contactForm/contactForm.scss
+++ b/src/components/contactForm/contactForm.scss
@@ -26,7 +26,8 @@
   max-width: 500px;
   width: 98%;
   border-radius: 16px;
-  background-color: rgb(234, 245, 241);
+//   background-color: rgb(234, 245, 241);
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 25px 20px;
