--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -12,7 +12,22 @@
 
 .footer_top {
   padding: 15px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .footer_logo {
+    width: 60px;
+  }
+
+  span {
+    font-weight: bold;
+    font-size: 36px;
+    text-shadow: 0 1px 0 #31a2e4, 0 2px 0 #c9c9c9, 0 3px 0 #40a4e7, 0 3px 5px rgba(81, 162, 216, 0.2),
+      0 5px 10px rgba(54, 154, 236, 0.25), 0 10px 10px rgba(47, 149, 233, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+  }
 }
+
+
 .footer_center {
   width: 100%;
   padding: 0 10px;
