--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,10 +30,17 @@
     display: flex;
     justify-content: flex-start;
     padding-left: 10px;
-
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    span {
+      font-weight: bold;
+      font-size: 24px;
+      text-shadow: 0 1px 0 #31a2e4, 0 2px 0 #c9c9c9, 0 3px 0 #40a4e7, 0 3px 5px rgba(81, 162, 216, 0.2),
+        0 5px 10px rgba(54, 154, 236, 0.25), 0 10px 10px rgba(47, 149, 233, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+    }
     img {
-      cursor: pointer;
-      width: 100px;
+      width: 50px;
       object-fit: cover;
     }
   }
